--- a/project.html
+++ b/project.html
@@ -1,176 +1,148 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Project.PAW – 상세보기</title>
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>프로젝트 상세 — Project.PAW</title>
+  <link rel="stylesheet" href="common.css"/>
+  <link rel="stylesheet" href="app.min.css"/>
   <style>
-    body{margin:0;font-family:"Noto Sans KR",system-ui,Segoe UI,Roboto,sans-serif;background:#fff;color:#111827}
-    .wrap{max-width:960px;margin:0 auto;padding:24px 16px}
-    .hero{border:1px solid #e5e7eb;border-radius:14px;overflow:hidden;box-shadow:0 2px 8px rgba(15,23,42,.05);background:#fff}
-    .media{position:relative;background:#f1f5f9;border-bottom:1px solid #e5e7eb}
-    .media::before{content:"";display:block;padding-top:56.25%} /* 16:9 대표영역(상세는 좀 더 시원하게) */
-    .media>img{position:absolute;inset:0;width:100%;height:100%;object-fit:cover;object-position:center 40%}
-    .pad{padding:16px}
-    .title{margin:0 0 6px 0;font-size:22px;font-weight:900}
-    .muted{color:#64748b}
-    .badge{font-size:11px;padding:3px 7px;border-radius:999px;border:1px solid #d1fae5;background:#ecfdf5;color:#065f46}
-    .badge.pending{background:#fff7ed;color:#9a3412;border-color:#fed7aa}
-    .progress{width:100%;height:8px;border-radius:999px;background:#f1f5f9;border:1px solid #e5e7eb;overflow:hidden;margin:10px 0 6px}
-    .progress i{display:block;height:100%;width:0;background:linear-gradient(90deg,#4f7fff,#6bd3ff)}
-    .actions{display:flex;gap:10px;flex-wrap:wrap;margin-top:10px}
-    .btn{appearance:none;border:1px solid #e5e7eb;background:#fff;border-radius:10px;padding:10px 12px;font-weight:800;cursor:pointer}
-    .btn.primary{background:#1f6feb;color:#fff;border-color:transparent}
-    .btn.kakao{display:inline-flex;align-items:center;gap:8px}
-    .btn:disabled{opacity:.6;cursor:not-allowed}
+    .wrap { max-width: 1040px; margin: 0 auto; padding: 20px 16px; }
+    .header { display:grid; grid-template-columns: 1fr; gap:16px; }
+    .cover { width:100%; aspect-ratio: 16/9; object-fit:cover; border-radius:16px; border:1px solid #eef2f7; }
+    .title-row { display:flex; align-items:flex-start; justify-content:space-between; gap:12px; margin-top:6px; }
+    h1.title { font-size:1.6rem; font-weight:800; color:#111827; margin:0; }
+    .chip { display:inline-block; padding:2px 10px; border-radius:999px; font-size:.85rem; border:1px solid #e5e7eb; color:#374151; }
+    .chip.approved { background:#ecfdf5; border-color:#bbf7d0; color:#065f46; }
+    .chip.pending { background:#fff7ed; border-color:#fed7aa; color:#9a3412; }
+
+    /* 연결 우선 */
+    .stats { display:flex; flex-wrap:wrap; gap:12px; margin-top:8px; }
+    .hearts { display:flex; align-items:center; gap:8px; font-weight:800; color:#111827; }
+    .hearts .count { font-size:1.1rem; padding:6px 12px; border-radius:10px; background:#f1f5f9; }
+    .money { color:#4b5563; }
+    .meta { color:#6b7280; font-size:.95rem; }
+
+    .actions { display:flex; gap:10px; margin-top:12px; }
+    .btn { padding:10px 14px; border-radius:12px; font-weight:700; text-decoration:none; border:1px solid #111; }
+    .btn.primary { background:#111; color:#fff; }
+    .btn.ghost { background:#fff; color:#111; border-color:#e5e7eb; }
+
+    .section { margin-top:24px; }
+    .section h2 { font-size:1.1rem; font-weight:800; margin:0 0 10px; color:#111827; }
+
+    .grid { display:grid; grid-template-columns: repeat(auto-fill, minmax(160px, 1fr)); gap:10px; }
+    .thumb { width:100%; aspect-ratio: 4/3; object-fit:cover; border-radius:10px; border:1px solid #eef2f7; }
+
+    @media (min-width: 900px){
+      .header { grid-template-columns: 560px 1fr; align-items:start; }
+    }
   </style>
 </head>
 <body>
-  <!-- 공통 헤더 -->
   <div data-include="header"></div>
 
-  <main class="wrap" aria-live="polite">
-    <article id="view" class="hero">
-      <div class="media"><img id="cover" src="img/placeholder.svg" alt="대표 이미지" loading="lazy" decoding="async"></div>
-      <div class="pad">
-        <div style="display:flex;justify-content:space-between;align-items:center;gap:8px">
-          <h1 id="title" class="title">로딩중…</h1>
-          <span id="badge" class="badge">대기</span>
-        </div>
-        <p id="summary" class="muted" style="margin:2px 0 8px"></p>
-
-        <div class="progress"><i id="bar" style="width:0%"></i></div>
-        <div id="meta" class="muted" style="display:flex;gap:12px;font-size:14px"></div>
-
-        <div class="actions">
-          <a id="kakaoBtn" class="btn kakao" href="#" target="_blank" rel="noopener" style="display:none">카카오 오픈채팅 참여</a>
-          <button id="shareBtn" class="btn">공유하기</button>
-          <a class="btn" href="project_list.html">목록</a>
-        </div>
-
-        <hr style="border:none;border-top:1px solid #e5e7eb;margin:14px 0">
-        <section>
-          <h2 style="font-size:16px;margin:0 0 6px 0">상세 설명</h2>
-          <div id="desc" style="white-space:pre-wrap;line-height:1.6"></div>
-        </section>
-
-        <p id="notice" class="muted" style="margin-top:12px;display:none">
-          관리자 승인 후 카카오 오픈채팅 링크가 공개됩니다.
-        </p>
-      </div>
-    </article>
+  <main class="wrap" id="app">
+    <!-- 동적 렌더 -->
   </main>
 
-  <!-- 공통 푸터 -->
   <div data-include="footer"></div>
 
   <script type="module">
     import { injectLayout } from "./js/include.js";
     injectLayout({ active: "project" });
+  </script>
 
-    import { db } from "./js/firebase.js";
-    import { doc, getDoc } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+  <script>
+    (function(){
+      const $app = document.getElementById('app');
 
-    const $ = s => document.querySelector(s);
-    const params = new URLSearchParams(location.search);
-    const id = params.get("id");
+      function getId(){
+        const id = new URL(location.href).searchParams.get('id');
+        return id || '';
+      }
+      function readProjects(){
+        try { const arr = JSON.parse(localStorage.getItem('projects')); return Array.isArray(arr)?arr:[]; }
+        catch(e){ return []; }
+      }
+      function fmt(n){ return Number(n||0).toLocaleString('ko-KR'); }
+      function dateStr(ts){
+        if(!ts) return '';
+        const d = new Date(ts);
+        return `${d.getFullYear()}.${(d.getMonth()+1).toString().padStart(2,'0')}.${d.getDate().toString().padStart(2,'0')}`;
+      }
 
-    const esc = (s='') => String(s).replace(/[&<>"']/g, m=>({ '&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;' }[m]));
-    const pct = (raised, target)=>{
-      const r=Number(raised||0), t=Number(target||0);
-      if(!t || t<=0) return 0;
-      return Math.max(0, Math.min(100, Math.round((r/t)*100)));
-    };
+      const id = getId();
+      const p = readProjects().find(x => (x.id+'') === (id+''));
 
-    async function load(){
-      if(!id){
-        $("#title").textContent = "잘못된 접근입니다.";
+      if (!p){
+        $app.innerHTML = `<div class="section">
+          <h2>프로젝트를 찾을 수 없습니다</h2>
+          <p class="meta">잘못된 주소이거나 삭제된 프로젝트입니다.</p>
+          <div class="actions"><a class="btn ghost" href="project_list.html">목록으로</a></div>
+        </div>`;
         return;
       }
-      const ref = doc(db, "projects", id);
-      const snap = await getDoc(ref);
-      if(!snap.exists()){
-        $("#title").textContent = "존재하지 않는 프로젝트입니다.";
-        return;
-      }
 
-      const p = snap.data();
+      const cover = p.representativeImage || "img/placeholder.svg";
+      const tag = p.adminApproved ? '<span class="chip approved">승인</span>' : '<span class="chip pending">대기</span>';
+      const hearts = Array.isArray(p.supporters) ? p.supporters.length : 0;
 
-      // 이미지 (원본 어떤 사이즈라도 16:9 영역에 일관 렌더)
-      $("#cover").src = p.imageUrl || p.images?.cover || "img/placeholder.svg";
-      $("#cover").alt = (p.title || "대표 이미지") + " 대표 이미지";
+      // 공개 화면에서는 등록자 카카오ID 등 내부검증 항목은 노출하지 않음
+      const kakaoBtn = p.kakaoInviteLink
+        ? `<a class="btn primary" href="${p.kakaoInviteLink}" target="_blank" rel="noopener">카카오톡으로 연결하기</a>`
+        : '';
 
-      // 타이틀/요약/설명
-      $("#title").textContent = p.title || "제목 없음";
-      $("#summary").textContent = p.summary || "";
-      $("#desc").textContent = p.description || "";
+      $app.innerHTML = `
+        <div class="header">
+          <img class="cover" src="${cover}" alt="${p.name || 'project cover'}"/>
 
-      // 배지/승인상태
-      const badge = $("#badge");
-      if(p.status === "approved"){
-        badge.className = "badge";
-        badge.textContent = "승인";
-      } else {
-        badge.className = "badge pending";
-        badge.textContent = "대기";
-      }
+          <div>
+            <div class="title-row">
+              <h1 class="title">${p.name ?? '(이름 없음)'}</h1>
+              ${tag}
+            </div>
 
-      // 메타/진행률
-      const progress = pct(p.raisedAmount, p.targetAmount);
-      $("#bar").style.width = progress + "%";
-      const meta = [];
-      if(p.targetAmount) meta.push(`목표 ${Number(p.targetAmount).toLocaleString()}원`);
-      if(p.selfPayAmount) meta.push(`구조자 ${Number(p.selfPayAmount).toLocaleString()}원`);
-      if(p.raisedAmount) meta.push(`현재 ${Number(p.raisedAmount).toLocaleString()}원`);
-      $("#meta").innerHTML = meta.map(m=>`<span>${esc(m)}</span>`).join("");
+            <div class="stats">
+              <div class="hearts">❤️ <span class="count">연결된 마음 ${hearts}명</span></div>
+              <div class="money">목표 ${fmt(p.goalAmount)}원 · 구조자 부담 ${fmt(p.rescuerContribution)}원</div>
+              <div class="meta">등록일 ${dateStr(p.createdAt)}</div>
+            </div>
 
-      // 카카오 버튼 노출
-      const btn = $("#kakaoBtn");
-      const notice = $("#notice");
-      const link = p.kakaoUrl || p.kakaoLink;
-      if(p.status === "approved" && link){
-        btn.href = link;
-        btn.style.display = "inline-flex";
-        notice.style.display = "none";
-      } else {
-        btn.style.display = "none";
-        notice.style.display = "block";
-      }
+            <div class="actions">
+              ${kakaoBtn}
+              <a class="btn ghost" href="project_list.html">목록으로</a>
+            </div>
 
-      // 공유
-      $("#shareBtn").addEventListener("click", async ()=>{
-        try{
-          const shareData = {
-            title: p.title || "Project.PAW",
-            text: (p.summary || p.description || "").slice(0,100),
-            url: location.href
-          };
-          if(navigator.share){ await navigator.share(shareData); }
-          else {
-            await navigator.clipboard.writeText(location.href);
-            alert("링크를 클립보드에 복사했습니다.");
-          }
-        }catch(e){ console.warn(e); }
-      });
+            <div class="section">
+              <h2>상황 요약</h2>
+              <p>${p.summary ?? ''}</p>
+            </div>
+          </div>
+        </div>
 
-      // (선택) 동적 OG 메타 주입 – 크롤러에 바로 먹히진 않지만 SNS 미리보기 개선용
-      try{
-        const head = document.head;
-        const ensure = (name, content, prop=false) => {
-          const sel = prop ? `meta[property="${name}"]` : `meta[name="${name}"]`;
-          let el = head.querySelector(sel);
-          if(!el){ el = document.createElement("meta"); (prop? el.setAttribute("property", name): el.setAttribute("name", name)); head.appendChild(el); }
-          el.setAttribute("content", content);
-        };
-        ensure("og:title", p.title || "Project.PAW", true);
-        ensure("og:description", (p.summary || p.description || "").slice(0,120), true);
-        ensure("og:image", p.imageUrl || p.images?.cover || "", true);
-        ensure("twitter:card", "summary_large_image");
-      }catch{}
-    }
+        <div class="section">
+          <h2>상세 설명</h2>
+          <p>${(p.description ?? '').replace(/\n/g, '<br/>')}</p>
+        </div>
 
-    load();
+        ${Array.isArray(p.gallery) && p.gallery.length ? `
+          <div class="section">
+            <h2>구조 상황 사진</h2>
+            <div class="grid">
+              ${p.gallery.map(src=>`<img class="thumb" src="${src}" alt="gallery"/>`).join('')}
+            </div>
+          </div>` : ''}
+
+        ${Array.isArray(p.receipts) && p.receipts.length ? `
+          <div class="section">
+            <h2>영수증</h2>
+            <div class="grid">
+              ${p.receipts.map(src=>`<img class="thumb" src="${src}" alt="receipt"/>`).join('')}
+            </div>
+          </div>` : ''}
+      `;
+    })();
   </script>
 </body>
 </html>
